fix nav on mobile

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -277,7 +277,7 @@
 
       &:hover {
         color: $masthead-link-color-hover;
-        background: $navicon-link-color-hover;
+        background: $primary-variation;
       }
     }
 
@@ -309,7 +309,7 @@
 
     li {
       display: block;
-      border-bottom: 1px solid $border-color;
+      border-bottom: 1px solid $primary-color-accent;
 
       &:last-child {
         border-bottom: none;
